--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+getopts = "0.2"
+log = { version = "0.4.17" }
+env_logger = "0.10.0"
+uuid = "1.3.0"
+smoltcp = "0.9.1"
+rand = "0.8.5"
