--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,5 @@ getopts = "0.2"
 log = { version = "0.4.17" }
 env_logger = "0.10.0"
 uuid = "1.3.0"
-smoltcp = "0.9.1"
+smoltcp = { path="./external/smoltcp" }
 rand = "0.8.5"
