--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ env_logger = "0.10.0"
 uuid = "1.3.0"
 smoltcp = { path="./external/smoltcp" }
 rand = "0.8.5"
-thiserror = "*"
+thiserror = "1.0.40"
+ouroboros = "0.15.6"
