--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/smoltcp"]
 	path = external/smoltcp
 	url = git@github.com:Luis-Hebendanz/smoltcp.git
+[submodule "external/smolapps"]
+	path = external/smolapps
+	url = git@github.com:Luis-Hebendanz/smolapps.git
