--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ log = { version = "0.4.17" }
 env_logger = "0.10.0"
 uuid = "1.3.0"
 smoltcp = { path="./external/smoltcp" }
+smolapps = { path="./external/smolapps" }
 rand = "0.8.5"
 thiserror = "1.0.40"
 ouroboros = "0.15.6"
