--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 ipxe.iso filter=lfs diff=lfs merge=lfs -text
 ipxe.pxe filter=lfs diff=lfs merge=lfs -text
+ipxe.dsk filter=lfs diff=lfs merge=lfs -text
