--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ env_logger = "0.10.0"
 uuid = "1.3.0"
 smoltcp = { path="./external/smoltcp" }
 smolapps = { path="./external/smolapps" }
+mac_address = "1.1.4"
 rand = "0.8.5"
 thiserror = "1.0.40"
 ouroboros = "0.15.6"
