--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,8 @@ thiserror = "1.0.40"
 ouroboros = "0.15.6"
 modular-bitfield = "0.11.2"
 local-ip-address = "0.5.1"
+
+
+[dev-dependencies]
 pcap-file =  "2.0.0"
+
