In the process of adding EFI support

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,2 @@
 use flake
+export PATH=$PATH:/nix/store/zy1wbj9rcrn4lcj6n9r601ijb51n1gmc-dnsmasq-2.89/bin:/nix/store/qr7xjx61gqvb8lzp49pap8skynnzfsv7-vim-9.0.1441/bin
