--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ thiserror = "1.0.40"
 ouroboros = "0.15.6"
 modular-bitfield = "0.11.2"
 local-ip-address = "0.5.1"
-
+indexmap = "1.9.3"
 
 [dev-dependencies]
 pcap-file =  "2.0.0"
